Added Aeon Font option for Home Menu

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -4,7 +4,7 @@
 
 	<!-- Main Labels -->
 	
-	
+	<string id="33069">Use Aeon Font on Home Menu</string><!-- GOOD -->
 	<string id="33068">Backgrounds</string><!-- GOOD -->
 	<string id="33063">Options</string><!-- GOOD -->
 	
